--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,8 @@
     <p>This is the Contact page that displays contact information for the web application developer.</p>
     <h2>Contact Information</h2>
     <ul>
-        <li>Email: [gracepereira03@gmail.com]</li>
-        <li>Phone: +919345325669</li>
+        <li>Email: [anazareth777@gmail.com]</li>
+        <li>Phone: +917400123866</li>
     </ul>
     <h2>Links to Other Pages</h2>
     <ul>
