--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1>Welcome to My Resume</h1>
     <p>This is my resume website that contains information about my skills, experience, and education.</p>
 <div>
-<img src="grace.png">
+<img src="andre.png">
 </div>
     <h2>Links to Other Pages</h2>
     <ul>
